# app_hello_world_cpp

./: .gitignore  CMakeLists.txt
src/: main.cpp
